# vrka

./: .gitignore  .gitmodules  Language.g4  Language.interp  Language.tokens  LanguageLexer.interp  LanguageLexer.py  LanguageParser.py  LanguageVisitor.py  README.md  a.out  a.out.ll  antlr4  enum_example  functions.py  grun  langast.py  langbuiltins.py  langtypes.py  main.py  out  out.S  out.out  prog  pyproject.toml  utils.py  vrka.lark
examples/: enum_example.vrka  main.vrka  string_reverse.vrka
stdlib/: Cargo.toml  main.c  strutils.c  utils.c
stdlib/src/: lib.rs
vrka/: __main__.py  ast.py  scopes.py  tree_transformer.py  types.py  utils.py  v_ast.py  v_types.py
vrka/codegen/: __init__.py  typegen.py
vrka/ops/: __init__.py  addition.py
