[tool.poetry]
name = "vrka"
version = "0.1.0"
description = ""
authors = ["Prabhakar Dev <ayushashi11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lark = "^1.1.9"
llvmlite = {path = "llvmlite/llvmite/"}
werkzeug = "^3.0.2"
alg-types = "^0.1.1"
uuid = "^1.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
